--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,41 @@
-.App {
-  text-align: center;
+body {
+  background-color: rgb(2, 14, 14);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+}
+.editor-container {
+  margin: 50px auto;
+  width: 600px;
+  height: 250px;
+  /* position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%); */
+}
+.editor-input {
+  width: 100%;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+
+.previewer-container {
+  border: 2px solid green;
+  width: 800px;
+  min-height: 250px;
+  /* position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%); */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.previewer-output {
+  width: 100%;
+  height: 100%;
+  color: whitesmoke;
 }
