--- a/src/App.css
+++ b/src/App.css
@@ -2,40 +2,126 @@ body {
   background-color: rgb(2, 14, 14);
 }
 
-
 .app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
+.containers {
+  border-radius: 2%;
+  border: 2px solid rgba(25, 44, 25, 0.637);
 }
 .editor-container {
   margin: 50px auto;
   width: 600px;
-  height: 250px;
+  min-height: 250px;
   /* position: absolute;
   top: 10%;
   left: 50%;
   transform: translateX(-50%); */
 }
+
+@media only screen and (max-width: 825px) {
+  .editor-container {
+    width: 365px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .editor-container {
+    width: 100%;
+  }
+}
+
+.editor-title {
+  width: calc(100% - 10px);
+  height: 30px;
+  border-top-left-radius: 2%;
+  border-top-right-radius: 4%;
+  background-color: rgba(173, 205, 233, 0.589);
+  font-weight: 900;
+  padding-top: 10px;
+  padding-left: 30px;
+  color: rgb(18, 110, 247);
+  z-index: 5;
+}
 .editor-input {
   width: 100%;
   height: 100%;
+  color: whitesmoke;
+  background-color: rgba(240, 248, 255, 0.315);
+  padding: 10px;
+  outline: none;
+  resize: vertical;
+  border: none;
 }
 
-
 .previewer-container {
-  border: 2px solid green;
   width: 800px;
   min-height: 250px;
   /* position: absolute;
   bottom: 10%;
   left: 50%;
   transform: translateX(-50%); */
+  background-color: rgba(240, 248, 255, 0.144);
+  overflow: hidden;
+  border-radius: 1%;
+}
+
+@media only screen and (max-width: 825px) {
+  .previewer-container {
+    width: 600px;
+  }
+}
+
+@media only screen and (max-width: 625px) {
+  .previewer-container {
+    width: 400px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .previewer-container {
+    width: 100%;
+  }
+}
+
+.previewer-title {
+  width: calc(100% - 30px);
+  height: 30px;
+  border-top-left-radius: 2%;
+  border-top-right-radius: 4%;
+  background-color: rgba(173, 205, 233, 0.589);
+  font-weight: 900;
+  padding-top: 10px;
+  padding-left: 30px;
+  font-weight: bolder;
+  color: rgb(18, 110, 247);
 }
 
 .previewer-output {
   width: 100%;
   height: 100%;
   color: whitesmoke;
+  padding: 10px;
+}
+
+code {
+  background: rgba(147, 130, 153, 0.425);
+  padding: 1px 4px 2px 4px;
+  font-size: 12px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td,
+th {
+  border: 2px solid rgba(206, 26, 26, 0.623);
+  padding-left: 5px;
+  padding-right: 5px;
 }
